# mycelium-matrix-chat

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ansible.cfg  deploy-tfcmd-ansible.sh  deploy.sh  terraform.tfstate
backend/matrix-bridge/: Cargo.toml  Dockerfile.prod
backend/matrix-bridge/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/.sqlx/: query-2b5bca5895c57f309c8e5f9c0b64f9c920975c388e18e8da6d4450dad9a620a0.json  query-457e3eccdd1030c7fbe2f52e5419a5063d448952a969ad42e32ce50eb90faf5c.json  query-4bad745b17b83b349a4d4400f873386b5d7174d6bee64c091c78de5715e79ba1.json  query-66073f4e3dccc2d0aebfbd6b19c99801e2e765bb8d96e3a8f05af2287414d2bf.json  query-99c9b534f69603fb17f85d3a7154ff8fd7f7846343e3442f6ed1553d850a6d5b.json  query-a0ea857b2f43de1288ea0f357598cba2ce5cca3c4dfc5b0863465b499d660dac.json  query-b6ac0ab0680b4f7d87ce93cb706c83f21d6662fecf2a6ff66f6f850bc8e820f7.json  query-c569d2e31d40af4b89b19d3c8ed7e5fc11805079bcd60333d5713b3f745f81f5.json  query-ca2e77803585e2ddd5edc1953c333b53e937dc1bf67cfd6a13638bf10bc4803d.json  query-d6eae502f76d030738a9da64f54c441b4117e63d42d060d7885245fc95b1c8ec.json
backend/shared/migrations/: 20250831170512_create_initial_schema.sql
backend/shared/src/: bridge.rs  config.rs  database.rs  error.rs  lib.rs  server.rs  types.rs
backend/web-gateway/: Cargo.toml  Dockerfile.prod
backend/web-gateway/src/: main.rs
config/: mycelium.toml  nginx.conf
docker/: docker-compose.prod.yml  docker-compose.yml  init.sql
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  TECHNICAL_SPECIFICATION.md  TODO.md
docs/dev/: API_SPECIFICATION.md  README.md  ROADMAP.md  USER_EXPERIENCE.md
docs/dev/archive/: API_SPECIFICATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TODO.md  USER_EXPERIENCE.md
docs/dev/tfcmd-ansible-deployment/: mmc-tfcmd-ansible-deployment.md
docs/ops/: ansible-deployment.md  deployment.md  phase-1-test.md  production-deployment.md  security.md  tfgrid-deployment.md
docs/ops/archive/: dns-setup.md  phase-2-deploy.md  production-deployment.md  tfgrid-deployment.md
docs/users/: deployment_flow.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ConnectionStatus.tsx  Login.tsx  MessageInput.tsx  MessageList.tsx  MyceliumStatus.tsx
frontend/src/hooks/: useMatrix.ts
frontend/src/services/: api.ts  (+1 more)
infrastructure/: .terraform.tfstate.lock.info  credentials.auto.tfvars  credentials.auto.tfvars.example  inventory.tpl  main.tf  variables.tf
infrastructure/.secure/: README.md  setup-config-file.sh
inventory/: hosts.ini
platform/: ansible.cfg  site.yml
platform/group_vars/: mmc_servers.yml
scripts/: README.md  automated-deploy.sh  deploy-flexible.sh  deploy-mycelium-chat.sh  deploy-remote.sh  deploy-tfcmd-ansible.sh  deploy-to-tfgrid.sh  deploy.sh  deployment-prod.sh  ping.sh  prepare-tfgrid-vm.sh  tfcmd-cancel.sh  tfcmd-deploy.sh  wg.sh
scripts/config/: defaults.conf  local.conf  tfgrid.conf
scripts/lib/: config.sh  rollback.sh  utils.sh  validate.sh
(+14 files in other folders)
