[workspace]
members = [
    "backend/matrix-bridge",
    "backend/web-gateway",
    "backend/shared"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"
utoipa = "4.0"
