[package]
name = "matrix-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-full"] }
hyper = "1.0"
futures = "0.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Mycelium integration (placeholder - will be updated with actual crate)
mycelium = { git = "https://github.com/threefoldtech/mycelium", optional = true }

# Shared library
mycelium_matrix_chat = { path = "../shared" }

# Configuration
config = "0.14"

[features]
default = []
mycelium_integration = ["mycelium"]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
