[package]
name = "mycelium_matrix_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
sqlx.workspace = true
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }
hyper = "1.0"
futures = "0.3"
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

# Additional shared dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
regex = "1.10"
reqwest.workspace = true

# Configuration
config = "0.14"

[lib]
name = "mycelium_matrix_chat"
path = "src/lib.rs"
