[package]
name = "web-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa.workspace = true

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }
hyper = "1.0"
futures = "0.3"
base64 = "0.22"
reqwest.workspace = true

# Shared library
mycelium_matrix_chat = { path = "../shared" }

# Configuration
config = "0.14"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
